[package]
name = "rsw"
version = "0.2.0"
authors = ["schacker <schacker@foxmail.com>"]
edition = "2018"

[[bin]]
name = "rsw"
path = "src/main.rs"

[dependencies]
regex = "1.6.0"
comrak = "0.14.0"
clap = { version="3.2.22", features=["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
serde_derive = "1.0.104"
toml = "0.5"
chrono = "0.4.10"

[profile.release]
lto = true
