[package]
name = "rsw"
version = "0.2.0"
authors = ["schacker <schacker@foxmail.com>"]
edition = "2021"

[[bin]]
name = "rsw"
path = "src/main.rs"
additional-files = ["src/cli.yml"]

[dependencies]
regex = "1.6.0"
comrak = "0.17.0"
clap = { version="4.1.14" }
clap_derive = { version="4.1.12" }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
serde_derive = "1.0.144"
serde_json = "1.0.95"
schemars = "0.8.8"
toml = "0.7.3"
chrono = "0.4.10"

[profile.release]
lto = true

[profile.release-lto]
inherits = "release"
lto = true
