[package]
name = "rsw"
version = "0.2.0"
authors = ["schacker <schacker@foxmail.com>"]
edition = "2021"

[package.metadata]
# 打包的资源目录，默认为 "assets"
# 可以是相对路径，也可以是绝对路径
# 如果需要打包多个目录，则使用数组
# 如果只需要打包单个文件，则使用文件路径
assets = "assets"

[[bin]]
name = "rsw"
path = "src/main.rs"

[dependencies]
regex = "1.6.0"
comrak = "0.18.0"
clap = { version="4.1.14" }
clap_derive = { version="4.1.12" }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
serde_derive = "1.0.144"
serde_json = "1.0.95"
schemars = "0.8.8"
toml = "0.7.3"
chrono = "0.4.10"

[build-dependencies]
# 打包资源所需的库
include_dir = "0.7.3"

[profile.release]
lto = true

[profile.release-lto]
inherits = "release"
lto = true
